--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,28 +1,13 @@
-<!DOCTYPE HTML>
-<html manifest="">
-<head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=10, user-scalable=yes">
-	<title>frontend</title>
-
-  <script type="text/javascript">
-    var Ext = Ext || {};
-    Ext.beforeLoad = function (tags) {
-      //var s = location.search;
-      var profile;
-      profile = 'desktop';
-      Ext.manifest ='generatedFiles/' + profile;
-    };
-  </script>
-
-  <!-- The line below must be kept intact for Sencha Cmd to build your application -->
-  <script id="microloader" data-app="894f098a-468a-4d9b-9212-8cfdfac23c11" type="text/javascript" src="generatedFiles/bootstrap.js"></script>
-</head>
-  <body class="launching">
-    <div id="splash" style="margin-top:20%;font-family:Arial;font-size:64px;text-align:center;color:#404040;">
-      <div id="theLoadingText">LOADING...</div>
-      <i style="margin:20px;" class="fa fa-spinner fa-spin"></i>
-    </div>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React + TS</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
